# sigmod-2019

./: CMakeLists.txt  LICENSE  README  compile.sh  package.sh  run_sort.sh  test.sh
src/: main.cpp  settings.h
src/lib/: compare.h  memory.h  record.h  sync.h  timer.h  util.cpp  util.h
src/lib/io/: file-writer.h  io.cpp  io.h  memory-reader.h  mmap-reader.h  mmap-writer.h  worker.cpp  worker.h
src/lib/sort/: buffer.h  external.cpp  inmemory.cpp  merge.cpp  merge.h  radix.cpp  radix.h  sort.cpp  sort.h
src/sort/: main.cpp
